--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.h2.console.enabled=true
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:schema.sql
 spring.datasource.data=classpath:data.sql
+logging.level.org.springframework.security=debug
 
